--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,17 @@
-Flask
+# ----------------------
+# Flask
+# ----------------------
+flask
+
+
+# ----------------------
+# Testing
+# ----------------------
+mock
+
+
+# ----------------------
+# Production Server
+# ----------------------
+gevent
+gunicorn
